<resources>
    <string name="app_name">assn3</string>

    <!-- Resourses mainly used by welcome screen -->
    <string name="mineSeeker">Bad-Apples Seeker</string>
    <string name="byName">by Shivanshu Bansal</string>
    <string name="skip">Skip</string>

    <!-- Resourses mainly used by the main menu -->
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play Game!</string>
    <string name="options">Options</string>
    <string name="help">Help</string>

    <!-- Resourses mainly used by game board -->
    <string name="found">Found</string>
    <string name="space"> </string>
    <string name="of">of</string>
    <string name="mines">Mines</string>
    <string name="timesPlayed">Times Played</string>
    <string name="semicolon">:</string>
    <string name="hash">#</string>
    <string name="scans">Scans</string>
    <string name="used">used</string>
    <string name="game_over">Game Over</string>
    <string name="congratulations_you_won">Congratulations, You Won!!</string>
    
    <string name="apples">Apples</string>
    <string name="nosApples"># Apples</string>
    <string name="reset_times_played">Reset Times Played</string>
    <string name="save">Save</string>
    <string name="board_size">Board Size</string>
    <string name="settings">Settings</string>

    <string name="all_text_in_help">
        This App is written by Shivanshu Bansal. He is getting a bachelors in computing science and a minor in business from Simon Fraser University. Click
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home" style="color:blue">THIS</a> to go to the home page of CMPT 276 course website. The course is AMAZING!\nThis game is Apple-Seeker where you will go on a quest to search randomly hidden rotten apples behind closed grey boxes! You can change the difficulty of the game by changing the number of boxes and/or the number of rotten apples. The theme of the game is based on Halloween!\nBasics: When you click on a box it either has an apple behind it or not. If it does, then the apple appears and if it does not then it shows the total number of apples hidden in that row and column. If you have already found an apple and click again, then it tells you total number of hidden apples in that row and column. If you find an apple, no tries(scans) are used BUT if you do not find an apple then 1 scan is used, and if you click on the apple then 1 scan is used. The goal is to find all the apples by using least number of scans!\nCitations: Some concepts were taken from the web and youtube. The code belongs to Shivanshu Bansal. A music sound on start up belongs to Microsoft and was used as startup sound for Windows 2000. The pop/blob sound upon button click is taken from
         <a href="http://soundbible.com/2067-Blop.html">Soundible</a> Also, the background sound marimba was taken from google. All the images were taken from google images. Some images were edited by Shivanshu.
    </string>


</resources>